# learn-docs

./: linux cmd.txt  study website.txt
Compat Library/: 不具合管理表.xlsx
Compat Library/corecrt.h/: 単体試験仕様書及び結果報告書_ファイル名_corecrt.h.xlsx
Compat Library/direct.cpp/: 単体試験仕様書及び結果報告書_direct.cpp.xlsx
Compat Library/dllmain_wrapper.h/: 単体試験仕様書及び結果報告書_ファイル名_dllmain_wrapper.h.xlsx
Compat Library/errhandlingapi.cpp/: 単体試験仕様書及び結果報告書_ファイル名_errhandlingapi.cpp.xlsx
Compat Library/fileapi.cpp/: 単体試験仕様書及び結果報告書_fileapi_.xlsx
Compat Library/handleapi.cpp/: 単体試験仕様書及び結果報告書_handleapi.cpp_.xlsx
Compat Library/io.cpp/: 単体試験仕様書及び結果報告書_io.cpp.xlsx
Compat Library/ioapi.cpp/: 単体試験仕様書及び結果報告書_ファイル名_ioapi.cpp.xlsx
Compat Library/ioapiset.cpp/: 単体試験仕様書及び結果報告書_ioapiset.cpp_.xlsx
Compat Library/libloaderapi.cpp/: 単体試験仕様書及び結果報告書_libloaderapi.cpp_.xlsx
Compat Library/minwinbase.h/: 単体試験仕様書及び結果報告書_minwinbase.h_.xlsx
Compat Library/process.cpp/: 単体試験仕様書及び結果報告書_process.cpp_.xlsx
Compat Library/processthreadapi.cpp/: ~$単体試験仕様書及び結果報告書_processthreadapi.cpp_.xlsx  単体試験仕様書及び結果報告書_processthreadapi.cpp_.xlsx
Compat Library/profileapi.cpp/: 単体試験仕様書及び結果報告書_ファイル名_profileapi.cpp.xlsx
Compat Library/rpcdce.cpp/: 単体試験仕様書及び結果報告書_rpcdce.cpp_.xlsx
Compat Library/shellapi.cpp/: 単体試験仕様書及び結果報告書_shellapi.cpp_.xlsx
Compat Library/stdlib_win.cpp/: 単体試験仕様書及び結果報告書_stdlib_win.cpp_.xlsx
Compat Library/synchapi.cpp/: 単体試験仕様書及び結果報告書_synchapi.cpp_.xlsx
Compat Library/sysinfoapi.cpp/: 単体試験仕様書及び結果報告書_sysinfoapi.cpp_.xlsx
Compat Library/tchar.cpp/: 単体試験仕様書及び結果報告書_ファイル名_tchar.cpp.xlsx
Compat Library/tchar.cpp/LOG/: 新しいテキスト ドキュメント.txt
Compat Library/timezoneapi.cpp/: 単体試験仕様書及び結果報告書_timezoneapi.cpp_.xlsx
Compat Library/winbase.cpp/: 単体試験仕様書及び結果報告書_winbase.cpp_.xlsx
Compat Library/winreg.cpp/: 単体試験仕様書及び結果報告書_winreg.cpp_.xlsx
FSPChecker/: CMakeLists.txt  FSPChecker.sln  cross_arm.cmake  cross_x86.cmake
FSPChecker/Compat/: CMakeLists.txt  Winbase.h  basetsd.h  common_handle.cpp  common_handle.h  common_handle_cleanup.cpp  corecrt.h  corecrt_io.h  crtdbg.h  debugapi.cpp  debugapi.h  direct.cpp  direct.h  dllmain_wrapper.h  errhandlingapi.cpp  errhandlingapi.h  eventapi.cpp  eventapi.h  fileapi.cpp  fileapi.h  guiddef.h  handleapi.cpp  handleapi.h  inaddr.h  io.cpp  io.h  ioapi.cpp  ioapi.h  ioapiset.cpp  ioapiset.h  libloaderapi.cpp  libloaderapi.h  minwinbase.h  minwindef.h  process.cpp  process.h  processthreadsapi.cpp  processthreadsapi.h  profileapi.cpp  profileapi.h  (+31 more)
FSPChecker/Compat/safestringlib/include/: safe_str_lib.h  safe_types.h
FSPChecker/Compat/safestringlib/safeclib/: strncpy_s.c
FSPChecker/Debug/: FSPCheckerWritetime.ilk
FSPChecker/FSPCheckerCSharp/: AppConst.cs  CSharpFileWriteRead.cs  FSPCheckerCSharp.csproj  Log.cs  Program.cs  Sqlite3Insert.cs
FSPChecker/FSPCheckerCSharp/ForCE/: Newtonsoft.Json.Compact.xml
FSPChecker/FSPCheckerCSharp/Properties/: AssemblyInfo.cs
FSPChecker/FSPCheckerCpp/: FSPCheckerCpp.cpp  FSPCheckerCpp.vcproj  FSPCheckerCpp.vcxproj  FSPCheckerCpp.vcxproj.filters  FileWriteRead.cpp  FileWriteRead.h  Log.cpp  Log.h  LoggingTask.vcproj  ReadMe.txt  Sqlite3Insert.cpp  Sqlite3Insert.h
FSPChecker/FSPCheckerCpp/Debug/: vc142.idb
FSPChecker/FSPCheckerCpp/Debug/FSPCheckerCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FSPCheckerCpp.lastbuildstate
FSPChecker/FSPCheckerWritetime/: FSPChecker.cpp  FSPCheckerWritetime.vcxproj  FSPCheckerWritetime.vcxproj.filters  FileWriteTime.cpp  FileWriteTime.h
FSPChecker/FSPCheckerWritetime/Debug/: vc142.idb
FSPChecker/FSPCheckerWritetime/Debug/FSPCheck.59A7F9F9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FSPCheckerWritetime.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
